test/syc/bad/uniondupm.c
/*
 * Duplicate record member 'x'.
 */

union foo {
	int x;
	int x;
} f;
